- Syntax highlight word wrap is fixed. - Page excerpt is added. Works on every page - Bubble sort is added.

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -169,7 +169,7 @@ pre {
   white-space: pre;
   white-space: pre-wrap;
   word-break: break-all;
-  word-wrap: break-word;
+  word-wrap: normal;
   background-color: #f9f9f9;
 }
 pre code {
